<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".view.FullscreenActivity">

    <com.rcampbell.miningsimulator2019.view.MainView
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/upgrade_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:visibility="invisible"
        android:background="@color/black_overlay">
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TableLayout
                android:id="@+id/fullscreen_content_controls"
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:layout_gravity="top|right"
                android:background="@color/black_overlay"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/up_button"
                        style="?metaButtonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/up_button" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/left_button"
                        style="?metaButtonBarButtonStyle"
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/left_button" />

                    <Button
                        android:id="@+id/right_button"
                        style="?metaButtonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/right_button" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/down_button"
                        style="?metaButtonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/down_button" />
                </TableRow>

            </TableLayout>

            <LinearLayout
                android:id="@+id/hud"
                style="?metaButtonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:background="@color/black_overlay"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/money_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no_money"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/upgrade_view_button"
                    style="?metaButtonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/upgrades" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/fuel_guage"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:progress="100"
                        android:max="100"
                        android:progressBackgroundTint="#DD4444"
                        android:progressTint="#44DD44"/>

                    <Button
                        android:id="@+id/refuel_button"
                        style="?metaButtonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/refuel_button" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</FrameLayout>